--- a/UI/login.html
+++ b/UI/login.html
@@ -7,28 +7,25 @@
   <title>Question&Answer</title>
   <link rel="stylesheet" href="../UI/css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Acme|Poiret+One|Oleo+Script+Swash+Caps"
-      rel="stylesheet">
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  rel="stylesheet">
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
-    <!--- Header  --->
-    <header>
-      <nav>
-          <div class="menu-icon">
-              <!-- <i class="fa fa-bar fa-2x"></i> -->
+      <!--- Header  --->
+<header>
+  <nav>
+      <div class="menu-bar">
+          <h1><a href="index.html">Q&A</a></h1>
+          <div class="links">
+              <a href="signup.html">sign up</a>
           </div>
-        <!--- <div class="logo">
-              <a href="index.html" class=""><img src="" alt=""></a>
-          </div> -->
-
-          <div class="menu">
-              <ul>
-                  <li><a href="signup.html">sign up</a></li>
-              </ul>
-          </div> 
-      </nav>
-  </header>
+          <i class="material-icons menu">menu</i>
+      </div>
+      <div class="dropdown">
+          <a href="signup.html">sign up</a>
+      </div>
+  </nav>
+</header>
 
       <!-- the body --->
       <div id="showcase" class="grid">
@@ -63,5 +60,6 @@
   <footer id="footer" class="grid">
     <div class="content-wrap"></div>
   </footer>
+  <script src="script.js"></script>
 </body>
 </html>
