--- a/UI/signup.html
+++ b/UI/signup.html
@@ -5,28 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Question&Answer</title>
-  <link rel="stylesheet" href="../dist/css/style.css">
+  <link rel="stylesheet" href="../UI/css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Acme|Poiret+One|Oleo+Script+Swash+Caps"
       rel="stylesheet">
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-</head>
-<body>
-    <!--- Header  --->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    </head>
+    <body>
+          <!--- Header  --->
     <header>
       <nav>
-          <div class="menu-icon">
-              <!-- <i class="fa fa-bar fa-2x"></i> -->
+          <div class="menu-bar">
+              <h1><a href="index.html">Q&A</a></h1>
+              <div class="links">
+                  <a href="login.html">login</a>
+              </div>
+              <i class="material-icons menu">menu</i>
           </div>
-        <!--- <div class="logo">
-              <a href="index.html" class=""><img src="" alt=""></a>
-          </div> -->
-
-          <div class="menu">
-              <ul>
-                  <li><a href="login.html">Login</a></li>
-              </ul>
-          </div> 
+          <div class="dropdown">
+              <a href="login.html">login</a>
+          </div>
       </nav>
   </header>
 
@@ -65,5 +62,6 @@
   <footer id="footer" class="grid">
     <div class="content-wrap"></div>
   </footer>
+  <script src="script.js"></script>
 </body>
 </html>
