add animated sidebar for mobile screen

--- a/UI/index.html
+++ b/UI/index.html
@@ -20,7 +20,7 @@
                     <a href="login.html">login</a>
                     <a href="signup.html">sign up</a>
                 </div>
-                <i class="material-icons menu">menu</i>
+                <i class="material-icons menu" onclick="menu()">menu</i>
             </div>
             <div class="dropdown">
                 <a href="login.html">login</a>
