--- a/UI/login.html
+++ b/UI/login.html
@@ -19,7 +19,7 @@
           <div class="links">
               <a href="signup.html">sign up</a>
           </div>
-          <i class="material-icons menu">menu</i>
+          <i class="material-icons menu" onclick="menu()">menu</i>
       </div>
       <div class="dropdown">
           <a href="signup.html">sign up</a>
