--- a/UI/signup.html
+++ b/UI/signup.html
@@ -19,7 +19,7 @@
               <div class="links">
                   <a href="login.html">login</a>
               </div>
-              <i class="material-icons menu">menu</i>
+              <i class="material-icons menu" onclick="menu()">menu</i>
           </div>
           <div class="dropdown">
               <a href="login.html">login</a>
