modify animated sidebar for mobile

--- a/UI/user.html
+++ b/UI/user.html
@@ -23,14 +23,17 @@
                 <i class="material-icons menu" onclick="toggle()">menu</i>
             </div>
             <div class="sidebar">
-                <a href="login.html">login</a>
-                <a href="signup.html">sign up</a>
+                <div class="sidebar-link">
+                    <a href="login.html">login</a>
+                    <a href="signup.html">sign up</a>
+                </div>
             </div>
+            <div id="user-background-image"></div>
         </nav>
     </header>
 
     <div class="container">
-        <div class="dashboard">
+        <div class="content">
             
         </div>
     </div>
