add userprofile with comments,like and ask quesion button

--- a/UI/questions.html
+++ b/UI/questions.html
@@ -24,8 +24,8 @@
             </div>
             <div class="sidebar">
                 <div class="sidebar-link">
-                    <a href="login.html">login</a>
-                    <a href="signup.html">sign up</a>
+                    <a href="login.html">All Questions</a>
+                    <a href="signup.html">My Questions</a>
                 </div>
             </div>
             <div id="user-background-image"></div>
@@ -33,8 +33,16 @@
     </header>
 
     <div class="container">
-        <div class="content">
-            
+        <div class="main-content">
+            <div class="questions">
+              <h3>Ask a Question</h3>
+              <input type="text" name="username" id="username" placeholder=" ask your question">
+              <br>
+              <button type="submit" id="submit">Ask
+                <!--<i class="fa fa-sign-in"></i> Login -->
+            </button>
+            </div>
+            <div class="question-buttons"></div>
         </div>
     </div>
 
@@ -46,3 +54,5 @@
     <script src="script.js"></script>
   </body>
 </html>
+
+
