--- a/UI/questions.html
+++ b/UI/questions.html
@@ -34,17 +34,27 @@
 
     <div class="container">
         <div class="main-content">
-            <div class="questions">
-              <h3>Ask a Question</h3>
-              <input type="text" name="username" id="username" placeholder=" ask your question">
-              <br>
-              <button type="submit" id="submit">Ask
+            <div class="question">
+              <input type="text" name="username" id="ask" placeholder=" ask your question">
+              <button type="submit" id="submit_ask">Ask
                 <!--<i class="fa fa-sign-in"></i> Login -->
             </button>
+            <div class="menu_section">
+                <img src="./images/elipsis.png" alt="" class="menu_icon">
+            </div>
+            <div class="dropdown">
+                <ul>
+                    <li><a href="http://">edit</a></li>
+                    <li><a href="http://">vote</a></li>
+                    <li><a href="http://">delete</a></li>
+                </ul>
+            </div>
+        
             </div>
             <div class="question-buttons"></div>
         </div>
     </div>
+
 
 
         <!---Footer-->
