--- a/UI/signup.html
+++ b/UI/signup.html
@@ -35,7 +35,7 @@
                 <div id="get_started">
                   <h1>Question&Answer</h1>
                   <p>Get answers to your questtions</p>
-                  <form action="request.html">
+                  <form action="login.html">
                   <!--- <h1>Login</h1> -->
                     <label for="username"> </label>
                     <input type="text" name="username" id="username" placeholder=" Username">
