modify the user homepage

--- a/UI/all_questions.html
+++ b/UI/all_questions.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Question&Answer</title>
     <link rel="stylesheet" href="../UI/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Acme|Poiret+One|Oleo+Script+Swash+Caps"
         rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -59,7 +60,8 @@
                         </div>
                     </div>
                     <div class="menu_section">
-                        <img src="./images/elipsis.png" alt="" class="menu_icon" onclick="dropDownMenuList()">
+                        <img src="" alt="" class="menu_icon" onclick="dropDownMenuList()">
+                        <i class="fas fa-sort-down"></i>
                         <div class="dropdown">
                             <ul class="menu_list">
                                 <span class="close">&times;</span>
