--- a/UI/all_questions.html
+++ b/UI/all_questions.html
@@ -60,8 +60,7 @@
                         </div>
                     </div>
                     <div class="menu_section">
-                        <img src="" alt="" class="menu_icon" onclick="dropDownMenuList()">
-                        <i class="fas fa-sort-down"></i>
+                        <i class="fa fa-sort-desc menu_icon" onclick="dropDownMenuList()" aria-hidden="true"></i>
                         <div class="dropdown">
                             <ul class="menu_list">
                                 <span class="close">&times;</span>
@@ -88,7 +87,15 @@
                         </div>
                     </div>
                     <div class="menu_section">
-                        <img src="./images/elipsis.png" alt="" class="menu_icon">
+                        <i class="fa fa-sort-desc menu_icon" onclick="dropDownMenuList()" aria-hidden="true"></i>
+                        <div class="dropdown">
+                            <ul class="menu_list">
+                                <span class="close">&times;</span>
+                                <li><a href="http://">edit</a></li>
+                                <li><a href="http://">vote</a></li>
+                                <li><a href="http://">delete</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
 
@@ -107,7 +114,15 @@
                         </div>
                     </div>
                     <div class="menu_section">
-                        <img src="./images/elipsis.png" alt="" class="menu_icon">
+                        <i class="fa fa-sort-desc menu_icon" onclick="dropDownMenuList()" aria-hidden="true"></i>
+                        <div class="dropdown">
+                            <ul class="menu_list">
+                                <span class="close">&times;</span>
+                                <li><a href="http://">edit</a></li>
+                                <li><a href="http://">vote</a></li>
+                                <li><a href="http://">delete</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
 
@@ -126,7 +141,15 @@
                         </div>
                     </div>
                     <div class="menu_section">
-                        <img src="./images/elipsis.png" alt="" class="menu_icon">
+                        <i class="fa fa-sort-desc menu_icon" onclick="dropDownMenuList()" aria-hidden="true"></i>
+                        <div class="dropdown">
+                            <ul class="menu_list">
+                                <span class="close">&times;</span>
+                                <li><a href="http://">edit</a></li>
+                                <li><a href="http://">vote</a></li>
+                                <li><a href="http://">delete</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
