modify the dropdown for userprofile page

--- a/UI/all_questions.html
+++ b/UI/all_questions.html
@@ -60,20 +60,60 @@
                         </div>
                     </div>
                     <div class="menu_section">
-                      <!---- <i class="fa fa-sort-desc menu_icon" id="menu_icon" aria-hidden="true"></i> -->
-                        <select id="mySelect" class="menu_icon_select">
+                        <i class="fa fa-sort-desc menu_icon" onclick="dropDownMenuList()" aria-hidden="true"></i> 
+                       <!--  <select id="mySelect" class="menu_icon_select">
+                             <option>vote</option>
+                             <option>edit</option>
+                             <option>delete</option>
+                         </select> -->
+                     </div>
+                </div>
+
+                <div class="questions">
+                    <div class="profile_img_section">
+                        <img src="" alt="" class="profile_img">
+                    </div>
+                    <div class="questions_section">
+                        <h4 class="username">Username</h4>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta corporis alias voluptas nesciunt quidem illo a odit accusantium voluptatem, libero, cum rerum praesentium. Tenetur quis fugiat praesentium voluptas possimus officiis?
+                        </p>
+                        <div class="icons">
+                            <img src="./images/comment.png" alt="" class="comment">    
+                            <img src="./images/like1.png" alt="" class="like"> 
+                        </div>
+                    </div>
+                    <div class="menu_section">
+                        <i class="fa fa-sort-desc menu_icon" onclick="dropDownMenuList()" aria-hidden="true"></i> 
+                       <!--  <select id="mySelect" class="menu_icon_select">
+                             <option>vote</option>
+                             <option>edit</option>
+                             <option>delete</option>
+                         </select> -->
+                     </div>
+                </div>
+
+                <div class="questions">
+                    <div class="profile_img_section">
+                        <img src="" alt="" class="profile_img">
+                    </div>
+                    <div class="questions_section">
+                        <h4 class="username">Username</h4>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta corporis alias voluptas nesciunt quidem illo a odit accusantium voluptatem, libero, cum rerum praesentium. Tenetur quis fugiat praesentium voluptas possimus officiis?
+                        </p>
+                        <div class="icons">
+                            <img src="./images/comment.png" alt="" class="comment">    
+                            <img src="./images/like1.png" alt="" class="like"> 
+                        </div>
+                    </div>
+                    <div class="menu_section">
+                       <i class="fa fa-sort-desc menu_icon" onclick="dropDownMenuList()" aria-hidden="true"></i> 
+                      <!--  <select id="mySelect" class="menu_icon_select">
                             <option>vote</option>
                             <option>edit</option>
                             <option>delete</option>
-                        </select>
-                     <!----  <div class="dropdown">
-                            <ul class="menu_list1">
-                                <span class="close">&times;</span>
-                                <li><a href="http://">edit</a></li>
-                                <li><a href="http://">vote</a></li>
-                                <li><a href="http://">delete</a></li>
-                            </ul>
-                        </div> -->
+                        </select> -->
                     </div>
                 </div>
 
@@ -92,61 +132,13 @@
                         </div>
                     </div>
                     <div class="menu_section">
-                       <!--- <i class="fa fa-sort-desc menu_icon" onclick="dropDownMenuList()" aria-hidden="true"></i> -->
-                        <select id="mySelect" class="menu_icon_select">
-                            <option>vote</option>
-                            <option>edit</option>
-                            <option>delete</option>
-                        </select>
-                    </div>
-                </div>
-
-                <div class="questions">
-                    <div class="profile_img_section">
-                        <img src="" alt="" class="profile_img">
-                    </div>
-                    <div class="questions_section">
-                        <h4 class="username">Username</h4>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta corporis alias voluptas nesciunt quidem illo a odit accusantium voluptatem, libero, cum rerum praesentium. Tenetur quis fugiat praesentium voluptas possimus officiis?
-                        </p>
-                        <div class="icons">
-                            <img src="./images/comment.png" alt="" class="comment">    
-                            <img src="./images/like1.png" alt="" class="like"> 
-                        </div>
-                    </div>
-                    <div class="menu_section">
-                       <!--- <i class="fa fa-sort-desc menu_icon" onclick="dropDownMenuList()" aria-hidden="true"></i> -->
-                        <select id="mySelect" class="menu_icon_select">
-                            <option>vote</option>
-                            <option>edit</option>
-                            <option>delete</option>
-                        </select>
-                    </div>
-                </div>
-
-                <div class="questions">
-                    <div class="profile_img_section">
-                        <img src="" alt="" class="profile_img">
-                    </div>
-                    <div class="questions_section">
-                        <h4 class="username">Username</h4>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta corporis alias voluptas nesciunt quidem illo a odit accusantium voluptatem, libero, cum rerum praesentium. Tenetur quis fugiat praesentium voluptas possimus officiis?
-                        </p>
-                        <div class="icons">
-                            <img src="./images/comment.png" alt="" class="comment">    
-                            <img src="./images/like1.png" alt="" class="like"> 
-                        </div>
-                    </div>
-                    <div class="menu_section">
-                       <!--- <i class="fa fa-sort-desc menu_icon" onclick="dropDownMenuList()" aria-hidden="true"></i> -->
-                        <select id="mySelect" class="menu_icon_select">
-                            <option>vote</option>
-                            <option>edit</option>
-                            <option>delete</option>
-                        </select>
-                    </div>
+                        <i class="fa fa-sort-desc menu_icon" onclick="dropDownMenuList()" aria-hidden="true"></i> 
+                       <!--  <select id="mySelect" class="menu_icon_select">
+                             <option>vote</option>
+                             <option>edit</option>
+                             <option>delete</option>
+                         </select> -->
+                     </div>
                 </div>
             </div>
             <div class="question-buttons"></div> 
@@ -213,6 +205,19 @@
                 </section>
             </div>
     
+            <!--Dropdown-->
+            <div class="modal_dropdown">
+                <section>
+                    <div id="dropdown_section">
+                        <ul class="menu_list1">
+                            <span class="close" onclick="closeModalDropdown()">&times;</span>
+                            <li><a href="http://">edit</a></li>
+                            <li><a href="http://">vote</a></li>
+                            <li><a href="http://">delete</a></li>
+                        </ul>
+                    </div>
+                </section>
+            </div>
 
         <!---Footer-->
         <footer id="footer" class="grid">
