modify the icons in userprofile page and add profile page

--- a/UI/index.html
+++ b/UI/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Question&Answer</title>
     <link rel="stylesheet" href="../UI/css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Acme|Poiret+One|Oleo+Script+Swash+Caps"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Acme|Poiret+One|Oleo+Script+Swash+Caps" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
+
 <body>
-            <!--- Header  --->
+    <!--- Header  --->
     <header>
         <nav>
             <div class="menu-bar">
@@ -30,19 +31,19 @@
     </header>
 
     <!-- the body --->
-        <div id="showcase" class="grid">
-            <div id="bg-image"></div>
-            <div class="content-wrap words">
-                <div id=question_answer>
-                    <h1>Question&Answer</h1>
-                    <p>Get answers to your questions</p>
-                    <div id="get_started">
-                        <a href="signup.html">Get Started</a>
-                        <a href="login.html">Login</a>
-                    </div>
+    <div id="showcase" class="grid">
+        <div id="bg-image"></div>
+        <div class="content-wrap words">
+            <div id=question_answer>
+                <h1>Question&Answer</h1>
+                <p>Get answers to your questions</p>
+                <div id="get_started">
+                    <a href="signup.html">Get Started</a>
+                    <a href="login.html">Login</a>
                 </div>
             </div>
-        </div> 
+        </div>
+    </div>
 
 
 
@@ -52,4 +53,5 @@
     </footer>
     <script src="script.js"></script>
 </body>
+
 </html>
