--- a/UI/signup.html
+++ b/UI/signup.html
@@ -41,6 +41,9 @@
                         <label for="username"> </label>
                         <input type="text" name="username" id="username" placeholder=" Username">
                         <br>
+                        <label for="email"> </label>
+                        <input type="text" name="email" id="email" placeholder=" email">
+                        <br>
                         <label for="password"></label>
                         <input type="password" name="password" id="password" placeholder=" Password">
                         <br>
